Fix contact card text overflow

--- a/src/main/contact/contact.css
+++ b/src/main/contact/contact.css
@@ -49,3 +49,10 @@
     color: var(--text-white);
     text-decoration: none;
 }
+
+.social-card-name {
+    font-size: 1rem;
+    color: var(--text-white);
+    text-decoration: none;
+    overflow-wrap: break-word;
+}
